# mojimoji-rs

./: Cargo.toml  readme.md
src/: lib.rs
