[package]
name = "mojimoji-rs"
version = "0.1.1"
edition = "2021"

authors = ["Tomohiro Endo <europeanplaice@gmail.com>"]
description = "Rust implementation of a fast converter between Japanese hankaku and zenkaku characters, mojimoji." 
repository = "https://github.com/europeanplaice/mojimoji-rs"
readme = "readme.md"
license = "MIT OR Apache-2.0"

[dependencies]
